Revert to Java 21, update gradle, dep/repo changes + other
Changed getTinyConfigBoolean to just getBoolean since the class implies TinyConfig
Changed NEU API threads calculation to use less threads